stop trying to wrap autocomplete with underlying dialog - seems to be impossible to get it right on all platforms

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -269,7 +269,3 @@ div.ui-tooltip {
     padding: 2px;
     margin-right: 5px;
 }
-
-.recent-notes-autocomplete {
-    border: 0 !important;
-}
